--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 .Alkuteksti{
-    color: red;
+    background-color:rgb(54, 57, 69);
+    position: absolute;
+    left: 44%;
+    border-radius: 10px;
+    padding: 8em;
 }
 body{
     background-color: black;
