--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-.Alkuteksti{
+/* .Alkuteksti{
     background-color:rgb(54, 57, 69);
     position: absolute;
     left: 44%;
     border-radius: 10px;
     padding: 8em;
-}
+} */
 body{
     background-color: black;
+    background: linear-gradient(to top, transparent);
 }
