--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
-/* .Alkuteksti{
-    background-color:rgb(54, 57, 69);
+header .Alkuteksti{
     position: absolute;
-    left: 44%;
-    border-radius: 10px;
-    padding: 8em;
-} */
+    z-index: 1;
+    color: #fff;
+    right: 50%;
+}
 body{
     background-color: rgb(3, 8, 29);
     background: linear-gradient(to top, transparent);
