--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
-header .Alkuteksti{
+@import url('https://fonts.googleapis.com/css?family=Poppins');
+section #alkuteksti{
     position: absolute;
     z-index: 1;
     color: #fff;
-    right: 50%;
+    right: 13%;
+    top: 10px;
 }
 body{
     background-color: rgb(3, 8, 29);
-    background: linear-gradient(to top, transparent);
+    font-family: 'Poppins';
 }
 header{
     font-family: 'Poppins';font-size: 22px;
@@ -14,7 +16,7 @@ header{
     top: 0;
     left: 0;
     width: 100%;
-    padding: 30px 100px;
+    /* padding: 30px 100px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -31,7 +33,25 @@ header ul li{
     list-style: none;
     color: white;
 }
-header .image{
+section{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    /* padding: 100px; */
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+}
+section::before{
+    content: "";
+    position: absolute;
+    top: 95%;
+    width: -webkit-fill-available;
+    background: linear-gradient(to top, rgb(3, 8, 29), transparent);
+    z-index: 1000;
+    height: 19%;
+}
+section .image{
     content: '';
     position: absolute;
     width: -webkit-fill-available;
@@ -42,4 +62,18 @@ header ul li a{
     text-decoration: none;
     padding: 10px;
     color: #fff;
+}
+section .logo{
+    position: relative;
+    inline-size: -webkit-fill-available;
+    padding: 18%;
+    z-index: 1;
+    bottom: 51em;
+}
+.lorem{
+    position: relative;
+    color: #fff;
+    padding: 100px;
+    background: rgb(3, 8, 29);
+    z-index: -1;
 }
