--- a/style.css
+++ b/style.css
@@ -34,29 +34,30 @@ header ul li{
     color: white;
 }
 section{
-    position: relative;
+position: absolute;
     width: 100%;
     height: 100vh;
     /* padding: 100px; */
-    /* display: flex; */
+    display: flex;
     justify-content: center;
     align-items: center;
 }
 section::before{
     content: "";
     position: absolute;
-    top: 95%;
+    bottom: 245px;
     width: -webkit-fill-available;
     background: linear-gradient(to top, rgb(3, 8, 29), transparent);
     z-index: 1000;
-    height: 19%;
+    height: 100px;
 }
 section .image{
-    content: '';
     position: absolute;
     width: -webkit-fill-available;
     top: 0;
     left: 0;
+    object-fit: cover;
+    pointer-events: none;
 }
 header ul li a{
     text-decoration: none;
@@ -64,16 +65,19 @@ header ul li a{
     color: #fff;
 }
 section .logo{
-    position: relative;
+    position: absolute;
     inline-size: -webkit-fill-available;
-    padding: 18%;
+    /* padding: 18%; */
     z-index: 1;
-    bottom: 51em;
+    /* bottom: 56em; */
+    max-width: 1200px;
+    top: -29em;
+    right: 24em;
 }
 .lorem{
-    position: relative;
     color: #fff;
-    padding: 100px;
+    /* padding: 100px; */
     background: rgb(3, 8, 29);
     z-index: -1;
+    position: absolute;
 }
