--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 section #alkuteksti{
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     color: #fff;
     right: 13%;
     top: 10px;
@@ -12,7 +12,7 @@ body{
 }
 header{
     font-family: 'Poppins';font-size: 22px;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
@@ -20,32 +20,36 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 1000;
 }
 header ul{
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-    z-index: 1;
+    z-index: 1000;
 }
 header ul li{
     text-decoration: none;
     list-style: none;
     color: white;
+    z-index: 1000;
 }
 section{
-position: absolute;
-    width: 100%;
-    height: 100vh;
-    /* padding: 100px; */
+    position: static;
+    width: -webkit-fill-available;
+    height: 38em;
     display: flex;
     justify-content: center;
     align-items: center;
+    content: "";
+    z-index: 10000;
+    margin-left: -10px;
 }
 section::before{
     content: "";
-    position: absolute;
-    bottom: 245px;
+    position: relative;
+    bottom: -41%;
     width: -webkit-fill-available;
     background: linear-gradient(to top, rgb(3, 8, 29), transparent);
     z-index: 1000;
@@ -54,10 +58,14 @@ section::before{
 section .image{
     position: absolute;
     width: -webkit-fill-available;
-    top: 0;
-    left: 0;
+    top: -8px;
+    left: -9px;
     object-fit: cover;
     pointer-events: none;
+    /* background: linear-gradient(to bottom, rgb(3, 8, 29), transparent);
+    background-size: cover;
+    z-index: 1; */
+    
 }
 header ul li a{
     text-decoration: none;
@@ -74,10 +82,18 @@ section .logo{
     top: -29em;
     right: 24em;
 }
-.lorem{
+.lorem h2{
     color: #fff;
     /* padding: 100px; */
     background: rgb(3, 8, 29);
     z-index: -1;
-    position: absolute;
+    position: static;
+    font-size: 3em;
+}
+.lorem p{
+    font-size: 1em;
+    color: #fff;
+}
+.lorem{
+    text-align: center;
 }
