--- a/style.css
+++ b/style.css
@@ -96,4 +96,12 @@ section .logo{
 }
 .lorem{
     text-align: center;
+    border-radius: 10px;
+    border-style: double;
+    color: rgba(255, 255, 255, 0.459);
+    box-sizing: border-box;
+    max-width: 400px;
+}
+.lorem h1{
+    padding: 10px;
 }
