--- a/style.css
+++ b/style.css
@@ -82,7 +82,11 @@ section .logo{
     top: -29em;
     right: 24em;
 }
-.lorem h2{
+.boxes{
+    display: flex;
+    justify-content: space-around;
+}
+.box1 h2{
     color: #fff;
     /* padding: 100px; */
     background: rgb(3, 8, 29);
@@ -90,18 +94,52 @@ section .logo{
     position: static;
     font-size: 3em;
 }
-.lorem p{
+.box1 p{
     font-size: 1em;
     color: #fff;
+    padding: 25px;
 }
-.lorem{
+.box1{
     text-align: center;
     border-radius: 10px;
     border-style: double;
     color: rgba(255, 255, 255, 0.459);
-    box-sizing: border-box;
     max-width: 400px;
+    min-height: 100px;
+    min-width: 400px;
 }
-.lorem h1{
+.box1 h1{
     padding: 10px;
+}
+.box2{
+    text-align: center;
+    border-radius: 10px;
+    border-style: double;
+    color: rgba(255, 255, 255, 0.459);
+    max-width: 400px;
+    min-width: 400px;
+}
+.box2 h2{
+    color: #fff;
+    background: rgb(3, 8, 29);
+    z-index: -1;
+    position: static;
+    font-size: 3em;
+}
+.box2 p{
+    font-size: 1em;
+    color: #fff;
+}
+.link ul{
+    border-radius: 10px;
+    background-color: rgba(102, 51, 153, 0.116);
+    list-style: none;
+    color: rgb(255, 255, 255);
+    border-style: double;
+}
+.link{
+    width: 300px;
+    align-items: center;
+    max-width: 200px;
+    min-width: 100px;
 }
