--- a/style.css
+++ b/style.css
@@ -3,41 +3,47 @@
 {
     scroll-behavior: smooth;
 }
-section #alkuteksti{
-    position: absolute;
+header #alkuteksti{
+    position: relative;
     z-index: 2;
-    color: #fff;
-    right: 4%;
-    top: 10px;
+    color: black;
+    right: 2%;
+}
+header #alkuteksti:hover{
+    transform: scale(0.9, 0.9);
+    transition: 0.2s;
 }
 body{
-    background-color: rgb(3, 8, 29);
+    background-color: rgb(255, 255, 255);
     font-family: 'Poppins';
     overflow-x: hidden;
 }
 header{
-    font-family: 'Poppins';font-size: 22px;
-    position: relative;
+font-family: 'Poppins';
+    font-size: 22px;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
-    /* padding: 30px 100px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 1000;
+    background-color: #fff;
+    border-bottom: groove;
 }
 header ul{
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: rgb(0, 0, 0);
     z-index: 1000;
+    cursor: pointer;
 }
 header ul li{
     text-decoration: none;
     list-style: none;
-    color: white;
+    color: rgb(0, 0, 0);
     z-index: 1000;
     min-width: 100px;
 }
@@ -46,59 +52,37 @@ section{
     width: -webkit-fill-available;
     height: 38em;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    content: "";
-    z-index: 10000;
-    margin-left: -10px;
+    justify-content: left;
+    border-bottom: inset;
 }
-section::before{
-    content: "";
+section #Jere{
     position: relative;
-    bottom: -41%;
-    width: -webkit-fill-available;
-    background: linear-gradient(to top, rgb(3, 8, 29), transparent);
-    z-index: 1000;
-    height: 100px;
+    font-size: 5em;
+    top: 30%;
+    left: 10%;
 }
-section .image{
-    position: absolute;
-    width: -webkit-fill-available;
-    top: -8px;
-    left: -9px;
-    object-fit: cover;
-    pointer-events: none;
-    /* background: linear-gradient(to bottom, rgb(3, 8, 29), transparent);
-    background-size: cover;
-    z-index: 1; */
-    
+section #Aronsalo{
+    position: relative;
+    font-size: 5em;
+    top: 40%;
+    left: 0%;
+}
+section #alateksti{
+    position: relative;
+    top: 63%;
+    right: 420px;
+    background: black;
+    color: #fff;
+    margin-bottom: 29%;
+    border-radius: 6px;
+    padding: 7px;
 }
 header ul li a{
     text-decoration: none;
     padding: 10px;
-    color: #fff;
-}
-section .logo{
-    position: absolute;
-    inline-size: -webkit-fill-available;
-    /* padding: 18%; */
-    z-index: 1;
-    /* bottom: 56em; */
-    max-width: 1200px;
-    top: -29em;
-    right: 24em;
-}
-#stars{
-    position: absolute;
-    z-index: 0;
-    max-height: 100%;
-    max-width: 100%;
-    min-width: 400px;
-    overflow: hidden;
-    margin-top: -7%;
-}
-section #stars{
-    position: absolute;
+    color: rgb(0, 0, 0);
+    font-size: 100%;
+    font-weight: bold;
 }
 .boxes{
     scroll-snap-type: proximity;
@@ -106,26 +90,29 @@ section #stars{
     display: flex;
     justify-content: space-around;
     z-index: 10;
-    color: #fff;
+    color: rgb(0, 0, 0);
+    padding: 2%;
 }
 .box1 h2{
     color: #fff;
     /* padding: 100px; */
-    background: rgb(3, 8, 29);
+    background: rgb(0, 0, 0);
     z-index: -1;
     position: static;
     font-size: 3em;
 }
 .box1 p{
     font-size: 1em;
-    color: #fff;
-    padding: 25px;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    border-right: 10px;
+    border-style: inset;
 }
 .box1{
     text-align: center;
-    border-radius: 10px;
-    border-style: double;
-    color: rgba(255, 255, 255, 0.459);
+    /* border-radius: 20px; */
+    /* border-style: ridge; */
+    color: rgba(0, 0, 0, 0.459);
     max-width: 400px;
     min-height: 100px;
     min-width: 400px;
@@ -135,28 +122,30 @@ section #stars{
 }
 .box2{
     text-align: center;
-    border-radius: 10px;
-    border-style: double;
-    color: rgba(255, 255, 255, 0.459);
+    color: rgba(0, 0, 0, 0.459);
     max-width: 400px;
     min-width: 400px;
 }
 .box2 h2{
     color: #fff;
-    background: rgb(3, 8, 29);
-    z-index: -1;
+    background: rgb(0, 0, 0);
     position: static;
     font-size: 3em;
 }
+.box2 h2:hover{
+    transform: scale(1.1, 1.1);
+    transition: 0.5s;
+}
 .box2 p{
     font-size: 1em;
-    color: #fff;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    border-right: 10px;
+    border-style: inset;
 }
 .box3{
     text-align: center;
-    border-radius: 10px;
-    border-style: double;
-    color: rgba(255, 255, 255, 0.459);
+    color: rgba(0, 0, 0, 0.459);
     max-width: 400px;
     min-width: 400px;
 
@@ -167,14 +156,21 @@ section #stars{
 .box3 h2{
     color: #fff;
     font-size: 3em;
+    background: black;
 }
 .box3 ol li a{
-    color: #fff;
+    color: rgb(0, 0, 0);
     text-align: center;
 }
 .box3 ol{
     text-decoration: underline;
     list-style: none;
+    font-weight: bold;
+    font-size: 1em;
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    border-right: 10px;
+    border-style: inset;
 }
 .Work h1{
     color: #fff;
