--- a/style.css
+++ b/style.css
@@ -46,11 +46,13 @@ header ul li{
     min-width: 100px;
 }
 section{
+    width: 100%;
     position: static;
     width: -webkit-fill-available;
     display: flex;
     justify-content: left;
     border-bottom: inset;
+    height: 35em;
 }
 section #Jere{
     position: relative;
@@ -70,9 +72,10 @@ section #alateksti{
     right: 421px;
     background: black;
     color: #fff;
-    margin-bottom: 29%;
     border-radius: 6px;
     padding: 7px;
+    height: 27px;
+    margin-bottom: 10em;
 }
 header ul li a{
     text-decoration: none;
@@ -174,22 +177,24 @@ header ul li a{
     border-style: inset;
 }
 .Work h1{
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     position: relative;
     justify-content: center;
-    align-items: center;
     display: flex;
+    background-color: black;
+    width: 8em;
+    left: 43%;
+    border-radius: 10px;
 }
 .Work{
-    scroll-snap-type: proximity;
-    overflow-y: scroll;
+
 
 }
 .Work #video{
     justify-content: center;
     align-items: center;
     display: flex;
-    position: relative;
+    position: static;
     left: 35%;
 }
 .aboutme{
@@ -200,6 +205,7 @@ header ul li a{
     position: relative;
     height: 34em;
     margin-top: 60px;
+    width: 100%;
 }
 .koodikuva{
     z-index: -1;
@@ -223,12 +229,14 @@ header ul li a{
     color: #fff;
     padding-bottom: 19em;
     position: relative;
+    width: 100%;
 }
 .footer .Contact{
     font-size: 21px;
-    left: 30%;
+    left: -1%;
     position: relative;
     top: 4em;
+    text-align: center;
 }
 form{
     display: flex;
