--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 {
     scroll-behavior: smooth;
 }
-@media screen and (max-width: 2440px){
+@media screen and (min-width:769px) and (max-width: 2440px){
     header #alkuteksti{
         position: relative;
         z-index: 2;
@@ -249,11 +249,13 @@
     }
     input, textarea{
         padding: 1.5em;
-        background: rgba(255, 255, 255, 0.274);
+        background: rgba(255, 255, 255, 0.041);
         border: 2px solid;
         color: #fff;
     }
 }
+
+
 
 
 @media screen and (min-width: 200px) and (max-width: 768px){
@@ -423,10 +425,18 @@
         position: relative;
         justify-content: center;
         display: flex;
-        background-color: black;
+        background-color: rgba(0, 0, 0, 0.219);
         width: 8em;
         left: 14%;
         border-radius: 10px;
+    }
+    .Work #video{
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        position: relative;
+        padding: 10, 10, 10;
+        width: 100%;
     }
     .aboutme{
         background-color: black;
@@ -437,14 +447,6 @@
         height: 34em;
         margin-top: 60px;
         width: 100%;
-    }
-    .aboutme .koodikuva{
-        z-index: -1;
-        margin-top: 24px;
-        position: relative;
-        opacity: 0.2;
-        height: 500px;
-        width: 500px;
     }
 
     .aboutme h2{
