--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@
     section #Jere{
         position: relative;
         font-size: 5em;
-        top: 2.2em;
-        left: 9%;
+        top: 181px;
+        left: 8.6%;
     }
     section #Aronsalo{
         position: relative;
@@ -211,7 +211,7 @@
         position: relative;
         opacity: 0.2;
         height: 500px;
-        width: 500px;
+        width: 600px;
     }
 
     .aboutme h2{
@@ -246,7 +246,7 @@
         top: 0.5em;
     }
     .footer .Contact{
-        font-size: 21px;
+        font-size: 30px;
         left: -1%;
         position: relative;
         top: 4em;
